<resources>
    <string name="app_name">To Be Focused</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="list_image">TaskEntity list background image</string>
    <string name="action_add">Add new taskEntity</string>
    <string name="details_edit_text_hint">Details</string>
    <string name="title_edit_text_hint">Title</string>
    <string name="pick_date">Pick date image button</string>
    <string name="add_btn_text">Add</string>
    <string name="update">Update</string>
    <string name="delete_all">Clear All</string>
    <string name="task_lists">Task Lists</string>
    <string name="all_tasks">All Tasks</string>
    <string name="index_list">Index</string>
    <string name="home_list">Home</string>
    <string name="work_list">Work</string>
    <string name="other_list">Other</string>
    <string name="select_list">Select List :</string>
    <string-array name="task_lists">
        <item>@string/index_list</item>
        <item>@string/home_list</item>
        <item>@string/work_list</item>
        <item>@string/other_list</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty">No tasks to show!</string>
    <string name="task_string">task</string>
    <string name="delete">Delete</string>
    <string name="task_cleared">Task cleared.</string>
    <string name="all_tasks_cleared">All tasks cleared.</string>
    <string name="deleted">Deleted</string>
    <string name="finished">Finished</string>
    <string name="pref">pref</string>
    <string name="date_key">dateKey</string>
</resources>
