<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.detail.TaskDetailActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_list" />

            <Spinner
                android:id="@+id/taskListSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/task_lists"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/title_edit_text_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <CheckBox
                android:id="@+id/addDescriptionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:button="@drawable/detail_selector" />

            <ImageButton
                android:id="@+id/setDateImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/pick_date"
                android:src="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                tools:text="10/12/2019" />

        </LinearLayout>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/details_edit_text_hint"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/addTaskButton"
                style="@style/ButtonBorder.Primary"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="50dp"
                android:text="@string/add_btn_text" />
        </FrameLayout>
    </LinearLayout>
</layout>